--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -17,10 +17,12 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
     "@tanstack/react-query": "^5.49.2",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.400.0",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
@@ -37,6 +39,7 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.50.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
